# swayws

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
src/: args.rs  cmd_virtual.rs  error.rs  main.rs  util.rs
