[package]
name = "swayws"
version = "0.2.3"
edition = "2018"
license = "MIT"
description = "Sway workspace tool which allows easy moving of workspaces to and from outputs"
repository = "https://gitlab.com/w0lff/swayws"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"
swayipc = "3.0"
thiserror = "1.0.37"
