[package]
name = "swayws"
version = "1.3.0"
authors = ["Hendrik Wolff <hendrik.wolff@agdsn.me>"]
license = "MIT"
description = "SwayWs allows easy moving of workspaces to and from outputs"
repository = "https://gitlab.com/w0lff/swayws"
edition = "2018"
readme = "README.md"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"
snafu = "0.7.4"
swayipc = "3.0"
